2004-02-12  Andras Varga

	* cproxygate.cc/.h: fix: local copy of messages sent out from the 
	partition was not deleted

	* communications classes: provided default impl. for broadcast() 
	in base class; broadcastException() to "eat" exceptions during
	broadcasting exception (not interested in stacked exceptions...)

2004-02-11  Andras Varga

	* receiveNonblocking() changed to return false if it was interrupted;
	now it's possible to stop (and resume) parallel simulation in Tkenv.

	* implemented message filtering by tag in the communications classes
	(cParsimCommunications subclasses) -- needed to handle race conditions
	in connectRemoteGates()

2004-02-04  ------ omnetpp-3.0pre1 released ------

2003-11-13  Andras Varga

	* checked in parallel simulation code that was developed March-May 2003,
	during my stay at Monash University.